Introduce `ASTHelpersGetStartPosition` Refaster rule